@@ -33,8 +33,10 @@ ifndef::imagesdir[:imagesdir: ./docs/src/main/asciidoc/]
 
 * 配置变更： 拆分``dew.cluster.dist`` 为 ``dew.cluster.lock``和``dew.cluster.map``
 * 配置变更： ``dew.cluster.election.config.election-period-sec`` to ``dew.cluster.config.election-period-sec``
+* 功能变更： 领导者选举、分布式锁、分布式Map的实例化方式由 ``dew.cluster.election/lock/map`` 修改成 ``dew.cluster.election/lock/map.instance(...)``
 * 功能变更： 移除服务脚手架，需要手工添加需要的接口服务
 * 功能变更： 移除mybatis-starter模块，请使用mybatis官方方案
+* 功能变更： swagger-ui.html 变更成 doc.html
 
 === 1.3.4-RC
 
